// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SVGIcon /> CustomColor story renders snapshot 1`] = `
<svg
  class="svgIcon"
  fill="#928CFF"
  role="presentation"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
  />
</svg>
`;

exports[`<SVGIcon /> CustomViewBox story renders snapshot 1`] = `
<svg
  class="svgIcon"
  fill="currentColor"
  role="presentation"
  viewBox="4 4 16 16"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
  />
</svg>
`;

exports[`<SVGIcon /> FullScreen story renders snapshot 1`] = `
<svg
  class="svgIcon"
  fill="currentColor"
  height="min(100%, 100vh)"
  role="presentation"
  style="--svg-icon-size: min(100%, 100vh);"
  viewBox="0 0 24 24"
  width="min(100%, 100vh)"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
  />
</svg>
`;

exports[`<SVGIcon /> InText story renders snapshot 1`] = `
<p
  class="typography sizeH1 colorBase"
>
  The svg icon defaults to the surrounding text size (
  <svg
    class="svgIcon"
    fill="currentColor"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      icon with 1em line height
    </title>
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
    />
  </svg>
  , 1em), but often looks better with the line height (
  <svg
    class="svgIcon"
    fill="currentColor"
    height="2rem"
    role="img"
    style="--svg-icon-size: 2rem;"
    viewBox="0 0 24 24"
    width="2rem"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      icon with 2em line height
    </title>
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
    />
  </svg>
  , 2rem) which is harder to determine. Take a look at the icons available in
   
  <a
    href="https://material-ui.com/components/material-icons/"
    rel="noreferrer"
    target="_blank"
  >
    https://material-ui.com/components/material-icons/
  </a>
  , currently we only support the filled icons.
</p>
`;

exports[`<SVGIcon /> Large story renders snapshot 1`] = `
<svg
  class="svgIcon"
  fill="currentColor"
  height="4em"
  role="presentation"
  style="--svg-icon-size: 4em;"
  viewBox="0 0 24 24"
  width="4em"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
  />
</svg>
`;

exports[`<SVGIcon /> Medium story renders snapshot 1`] = `
<svg
  class="svgIcon"
  fill="currentColor"
  height="2em"
  role="presentation"
  style="--svg-icon-size: 2em;"
  viewBox="0 0 24 24"
  width="2em"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
  />
</svg>
`;

exports[`<SVGIcon /> Small story renders snapshot 1`] = `
<svg
  class="svgIcon"
  fill="currentColor"
  height="1em"
  role="presentation"
  style="--svg-icon-size: 1em;"
  viewBox="0 0 24 24"
  width="1em"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
  />
</svg>
`;
